--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   bottom_navy_bar: ^6.0.0
   youtube_player_flutter: ^8.1.2
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
